--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ header .bg{
     height: 400px;
     background-repeat: no-repeat;
     background-size: 130em;
+    position: absolute;
+    width: 100%;
+    margin-top: 0px;
 }
 .header-text{
     margin: 0px;
@@ -38,7 +41,7 @@ header .bg{
     padding-right: 0px;
 }
 .go {
-   
+   outline: transparent;
     padding-top: 22px;
     padding-right: 20px;
     padding-bottom: 22px;
@@ -48,3 +51,39 @@ header .bg{
    border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
 }
+.display{
+    position: relative;
+    padding-top: 20em;
+    display: flex;
+    padding-left: 260px;
+    padding-right: 260px;
+  
+    
+}
+.display> div{
+    background-color: #fff;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+#ip{
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+    border-right: 1px grey solid;
+}
+#location{
+     border-right: 1px grey solid;
+}
+#timezone{
+    border-right: 1px grey solid;
+}
+#isp{
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    
+    
+}
+/* .leaflet{
+    background-color: yellow;
+    position: absolute;
+    top: 30px;
+} */
